--- a/FuzzyRuleBase/FuzzyRuleBase.csproj
+++ b/FuzzyRuleBase/FuzzyRuleBase.csproj
@@ -43,6 +43,7 @@
     <Compile Include="MembershipFunctions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rule.cs" />
+    <Compile Include="Variable.cs" />
     <Compile Include="VariablePartitionSchemes.cs" />
   </ItemGroup>
   <ItemGroup>
