Finalized GA test program

--- a/GAtest/GAtest.csproj
+++ b/GAtest/GAtest.csproj
@@ -47,6 +47,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\GeneticAlgorithm\EvolutionaryOptimization.csproj">
+      <Project>{d4025677-e3a7-4c45-8675-38d6d22e809d}</Project>
+      <Name>EvolutionaryOptimization</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
