--- a/GeneticFuzzyModel/GeneticFuzzyModel.csproj
+++ b/GeneticFuzzyModel/GeneticFuzzyModel.csproj
@@ -44,6 +44,7 @@
     <Compile Include="GeneticFuzzyModel.cs" />
     <Compile Include="Mutators.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VariableExtractor.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FuzzyRuleBase\FuzzyRuleBase.csproj">
